[gd_scene load_steps=3 format=3 uid="uid://jc2dp34ab7kv"]

[ext_resource type="Script" uid="uid://dglwom7mh871" path="res://Scripts/UI Scripts/escape_menu_script.gd" id="1_8x8rn"]
[ext_resource type="Theme" uid="uid://d2i3g6jblrvo1" path="res://Art/UI/Themes/base_theme.tres" id="2_rmbbv"]

[node name="EscapeMenuCanvasLayer" type="CanvasLayer" node_paths=PackedStringArray("panel")]
script = ExtResource("1_8x8rn")
panel = NodePath("Control")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_rmbbv")

[node name="Backdrop" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.203922)

[node name="EscapePanelContainer" type="PanelContainer" parent="Control"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 179.0
offset_right = 419.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/EscapePanelContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Header" type="PanelContainer" parent="Control/EscapePanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/EscapePanelContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 26
text = "PROJECT ARGOS"

[node name="ResumeButton" type="Button" parent="Control/EscapePanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
text = "RESUME "

[node name="OptionsButton" type="Button" parent="Control/EscapePanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
text = "OPTIONS"

[node name="MainMenuButton" type="Button" parent="Control/EscapePanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
text = "MAIN MENU"

[node name="QuitGameButton" type="Button" parent="Control/EscapePanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
text = "QUIT GAME"

[connection signal="pressed" from="Control/EscapePanelContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Control/EscapePanelContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Control/EscapePanelContainer/VBoxContainer/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
